# tracer

./: .bumpversion.cfg  .gitignore  .travis.yml  Gopkg.toml  README.md  azure-pipelines.yml  config.go  generate.go  glide.yaml  go.mod  go.sum  init.go  level.go  level_enumer.go  main_test.go  options.go  overhead_test.go  registry.go  segment.go  standard.go  tracer.go  version.go
all/: all.go
chrome/: chrome.go  chrome_easyjson.go  html.go  init.go
clibrary/: .clang-format  .gitignore  Makefile  cupti.go  cupti_no.go  env_injector.go  enviable.c  http_injector.go  injector.go  lib.go  main.go  types.go  utils.go
clibrary/benchmark/: CMakeLists.txt  main.cpp
clibrary/env/: constants.go  get.go  set.go
clibrary/python/: .gitignore  README.md  pytracer.py
clibrary/python/example/: addtwo.py  call.py  pytorch_mist.py  simple.py
clibrary/test/: test.cpp
convert/: .bra.toml  classification.go  classification_enumer.go  classify.go  colors.go  filter_by_depth.go  filter_predict_children.go  fix_trace_parents.go  generate.go  interval.go  interval_test.go  interval_tree.go  trace.go  utils.go
convert/_fixtures/: example_trace.json
convert/chrome/: .gitignore  NOTES  chrome.go  colors.go  combine.go  convert.go  html.go  main.go  trace.go  trace_view.go  tree.go  type.go  utils.go
convert/chrome/_fixtures/: example_output.json  example_trace.json
convert/chrome/speedscope_schema/: file-format-schema.json
convert/flame/: convert.go  html.go  main.go  node.go
convert/speedscope/schema/: generate.go  (+1 more)
ctimer/: ctimer.go  init.go
defaults/: perf.go
disabled/: init.go
examples/: .rai_config.yml  README.md  main.go
jaeger/: config.go  init.go  jaeger.go  observer.go  perf.go  perf_linux.go
middleware/: hijack.go  http.go  init.go  middleware.go
middleware/grpc/: client_interceptors.go  interceptors_test.go  metadata.go  server_interceptors.go
noop/: init.go  noop.go
observer/: config.go  defaults.go  dummy.go  gpu_meminfo.go  gpu_meminfo_arm64.go  gpu_meminfo_darwin.go  gpu_meminfo_nogpu.go  init.go  instruments.go  instruments_darwin.go  meminfo.go  noop.go  perf.go  perf_linux.go
opentracing/: config.go  init.go  opentracing.go
stackdriver/: init.go  stackdriver.go
tracecontext/: context.go
types/: jaeger_model.go
utils/: fixendpoints.go  port.go  port_go1.7.go
xray/: init.go  options.go  xray.go
zipkin/: config.go  global.go  global_testing.go  init.go  segment.go  tracer.go  zipkin.go  zipkintracer.orig
(+2 files in other folders)
